app/src/test/resources/programs/valid/foonctions/nestedFunction.extension
foo main() -> Int = {
    var mut ext: Int = 5;
    foo nested(a: Int) -> Int = {
        if ext > 3 then {
            a + ext
        } else {
            a - ext
        }
    }
    ext = 2;
    // Should return 1
    nested(3)
}
