app/src/test/resources/programs/invalid/conditionals/uninitializedVariablesInsideIf.extension
// Using uninitialized variable in 'if' condition
foo main() -> Int = {
    let mut flag: Bool;
    if flag then 1 else 0
}
